# resin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  notebook.py  pyproject.toml
resin/: __init__.py  __main__.py  api_client.py  fetcher.py  metadata.py
resin/bronze/: __init__.py  api_entity.py  api_page.py  schema.py  tracker.py
resin/cli/: __init__.py  bronze.py  options.py  silver.py
resin/commands/: fetcher.py
resin/commands/bronze/: __init__.py  fetcher.py  init.py
resin/commands/silver/: __init__.py  init.py  load.py  sql.py
resin/database/: __init__.py  engine.py  exceptions.py
resin/silver/: __init__.py  artistic_and_creative_product.py  collaboration.py  dissemination.py  fund.py  fund_link.py  further_funding.py  impact_summary.py  intellectual_property.py  key_finding.py  link.py  organisation.py  organisation_address.py  organisation_link.py  person.py  person_link.py  policy_influence.py  product.py  project.py  publication.py  research_database_and_model.py  research_material.py  schema.py  software_and_technical_product.py  spinout.py
resin/sql/: __init__.py  create_table_if_not_exists.py  printer.py
resin/sqlalchemy/: __init__.py  create_table_as.py  create_table_if_not_exists.py  printer.py
