[project]
name = "resin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.4.3",
    "duckdb-engine>=0.17.0",
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "shandy-sqlfmt>=0.28.2",
    "sqlalchemy>=2.0.45",
    "sqlparse>=0.5.4",
]

[tool.uv]
package = true

[project.scripts]
resin = "resin.cli:cli"
